--- a/珞珈二手宝云开发/project.private.config.json
+++ b/珞珈二手宝云开发/project.private.config.json
@@ -56,6 +56,6 @@
     }
   },
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "projectname": "%E7%8F%9E%E7%8F%88%E4%BA%8C%E6%89%8B%E5%AE%9D",
+  "projectname": "%E7%8F%9E%E7%8F%88%E4%BA%8C%E6%89%8B%E5%AE%9D%E4%BA%91%E5%BC%80%E5%8F%91",
   "libVersion": "2.32.2"
 }
