合并冲突部分

--- a/珞珈二手宝云开发/miniprogram/app.json
+++ b/珞珈二手宝云开发/miniprogram/app.json
@@ -1,7 +1,13 @@
 {
   "pages": [
     "pages/home/home",
-    "pages/index/index"
+    "pages/classification/classification",
+    "pages/center/center",
+    "pages/search/search",
+    "pages/my/my",
+    "pages/search/searchResult",
+    "pages/register/register",
+    "pages/loggingin/loggingin"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -10,5 +16,33 @@
     "navigationBarTitleText": "珞珈二手宝",
     "navigationBarTextStyle": "black"
   },
-  "sitemapLocation": "sitemap.json"
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath": "/images/home_a.png",
+        "selectedIconPath": "/images/home_b.png"
+      },
+      {
+        "pagePath": "pages/classification/classification",
+        "text": "分类",
+        "iconPath": "/images/order_a.png",
+        "selectedIconPath": "/images/order_b.png"
+      },
+      {
+        "pagePath": "pages/center/center",
+        "text": "我的",
+        "iconPath": "/images/my_a.png",
+        "selectedIconPath": "/images/my_b.png"
+      }
+    ]
+  },
+  "sitemapLocation": "sitemap.json",
+  "usingComponents": {
+    "van-button": "@vant/weapp/button/index",
+    "van-search": "@vant/weapp/search/index",
+    "van-tabbar": "@vant/weapp/tabbar/index",
+    "van-tabbar-item": "@vant/weapp/tabbar-item/index"
+  }
 }
