--- a/珞珈二手宝云开发/package.json
+++ b/珞珈二手宝云开发/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "luojiasecondhand",
+  "name": "second-hand_transaction_platform-main",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
