完成意见反馈于个人设置的页面，个人设置的后端基本开发完成

--- a/珞珈二手宝云开发/miniprogram/app.json
+++ b/珞珈二手宝云开发/miniprogram/app.json
@@ -1,8 +1,11 @@
 {
   "pages": [
+    
     "pages/home/home",
     "pages/classification/classification",
     "pages/center/center",
+    "pages/center-settings/center-settings",
+    "pages/center-suggestions/center-suggestions",
     "pages/search/search",
     "pages/my/my",
     "pages/search/searchResult",
